--- a/idnex.html
+++ b/idnex.html
@@ -40,6 +40,12 @@
           <span><i class="fa-brands fa-youtube"></i></span>
         </div>
       </a>
+      <a href="https://discord.gg/rq5jW6p6" target="_blank" style="color: black">
+        <div class="icon discord">
+          <div class="tooltip">Discord</div>
+          <span><i class="fa-brands fa-discord"></i></span>
+        </div>
+      </a>
     </div>
   </body>
 </html>
